--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,10 @@
 
 
 
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cormorant Garamond:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&display=swap');
 
 /* Scroll bar hidden Edge y Chrome */
 body::-webkit-scrollbar{
